--- a/docs/sdk-docs.mdx
+++ b/docs/sdk-docs.mdx
@@ -5,6 +5,7 @@ sidebar_label: "Customize Documentation"
 ---
 
 import { CodeWithTabs } from "@/mdx/components";
+import { Table } from "@/components/ui/Table";
 
 # Editing Your SDK Docs
 
@@ -130,11 +131,26 @@ By default, `USAGE.md` and the **SDK Example Usage** section in the main `README
 
 The `x-speakeasy-usage-example` extension can be further configured to associate each usage snippet with a custom header, description, and relative positioning.
 
-| Key           | Description                                                                                                                                                                           |
-| ------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `title`       | The title text to be used for the usage example (an empty string indicates no title).                                                                                                 |
-| `description` | The description for the usage example (an empty string indicates no description).                                                                                                     |
-| `position`    | Usage examples are sorted from lowest to highest based on the `position` value. Usage examples that share a `position` value will be sorted in the order they appear in the document. |
+<Table
+  data={[
+    {
+      key: "`title`",
+      description: "The title text to be used for the usage example (an empty string indicates no title)."
+    },
+    {
+      key: "`description`",
+      description: "The description for the usage example (an empty string indicates no description)."
+    },
+    {
+      key: "`position`",
+      description: "Usage examples are sorted from lowest to highest based on the `position` value. Usage examples that share a `position` value will be sorted in the order they appear in the document."
+    }
+  ]}
+  columns={[
+    { key: "key", header: "Key" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 This may be particularly useful for guiding users through a specific set of instructions or a "getting started" section. For example:
 
@@ -256,18 +272,76 @@ For example, if you wish to select an operation for both the **Override Server U
 
 The supported `tags` and their associated conditions are listed in this table:
 
-| README section    | Sub-section   | tag               | Conditions for selection to be effective                           |
-| :---------------- | ------------- | :---------------- | :----------------------------------------------------------------- |
-| Global Parameters |               | global-parameters | One of the `parameters` must originate from `x-speakeasy-globals`. |
-| Event Streaming   |               | eventstream       | One of the response must use the `text/event-stream` content type. |
-| Pagination        |               | pagination        | `x-speaskeasy-pagination` must be set for the operation.           |
-| Retries           |               | retries           | `x-speakeasy-retries` must be set for the operation.               |
-| Error Handling    |               | errors            | One of the responses must be an error with custom content data.    |
-| Server Selection  | Per-Client    | server            | `servers` must **not** be set at the operation level.              |
-| Server Selection  | Per-Operation | server            | Operation must define its own `servers` array.                     |
-| Authentication    | Per-Client    | security          | `security` must **not** be set for the operation.                  |
-| Authentication    | Per-Operation | security          | Operation must define its own `security` array.                    |
-| SDK Example Usage |               | usage             | None (same effect as `x-speakeasy-usage-example: true`).           |
+<Table
+  data={[
+    {
+      section: "Global Parameters", 
+      subsection: "", 
+      tag: "global-parameters", 
+      conditions: "One of the `parameters` must originate from `x-speakeasy-globals`."
+    },
+    {
+      section: "Event Streaming", 
+      subsection: "", 
+      tag: "eventstream", 
+      conditions: "One of the response must use the `text/event-stream` content type."
+    },
+    {
+      section: "Pagination", 
+      subsection: "", 
+      tag: "pagination", 
+      conditions: "`x-speaskeasy-pagination` must be set for the operation."
+    },
+    {
+      section: "Retries", 
+      subsection: "", 
+      tag: "retries", 
+      conditions: "`x-speakeasy-retries` must be set for the operation."
+    },
+    {
+      section: "Error Handling", 
+      subsection: "", 
+      tag: "errors", 
+      conditions: "One of the responses must be an error with custom content data."
+    },
+    {
+      section: "Server Selection", 
+      subsection: "Per-Client", 
+      tag: "server", 
+      conditions: "`servers` must **not** be set at the operation level."
+    },
+    {
+      section: "Server Selection", 
+      subsection: "Per-Operation", 
+      tag: "server", 
+      conditions: "Operation must define its own `servers` array."
+    },
+    {
+      section: "Authentication", 
+      subsection: "Per-Client", 
+      tag: "security", 
+      conditions: "`security` must **not** be set for the operation."
+    },
+    {
+      section: "Authentication", 
+      subsection: "Per-Operation", 
+      tag: "security", 
+      conditions: "Operation must define its own `security` array."
+    },
+    {
+      section: "SDK Example Usage", 
+      subsection: "", 
+      tag: "usage", 
+      conditions: "None (same effect as `x-speakeasy-usage-example: true`)."
+    }
+  ]}
+  columns={[
+    { key: "section", header: "README section" },
+    { key: "subsection", header: "Sub-section" },
+    { key: "tag", header: "tag" },
+    { key: "conditions", header: "Conditions for selection to be effective" }
+  ]}
+/>
 
 If you wish to select an operation for the main usage section as well as other sections, you can use the `usage` tag:
 
