--- a/openapi-hub/overlays.mdx
+++ b/openapi-hub/overlays.mdx
@@ -1,4 +1,5 @@
-import { Callout, Spotlight, Table } from "@/mdx/components";
+import { Callout, Spotlight } from "@/mdx/components";
+import { Table } from "@/components/ui/Table";
 
 # OpenAPI Overlays
 
@@ -97,9 +98,16 @@ A human-readable title describing the purpose of the Overlay document.
 
 ## !!steps `version`
 
-| Field Name | Type   | Required |
-| ---------- | ------ | -------- |
-| `version`  | String | ✅       |
+<Table 
+  data={[
+    { fieldName: "version", type: "String", required: "✅" }
+  ]}
+  columns={[
+    { key: "fieldName", header: "Field Name" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" }
+  ]}
+/>
 
 A version identifier indicating the version of the Overlay document.
 
