--- a/openapi-hub/paths/operations/content.mdx
+++ b/openapi-hub/paths/operations/content.mdx
@@ -1,4 +1,5 @@
 import { Callout } from "@/mdx/components";
+import { Table } from "@/components/ui/Table";
 
 # Content and Media Types in OpenAPI
 
@@ -86,13 +87,59 @@ Note that the request and response content types do not need to match. For examp
 
 A Media Type Object describes the request or response for a media type, with optional examples and extensions.
 
-| Field      | Type                                                                                                                         | Required | Description                                                                                                                                                                                                                                                                                                                                                                      |
-| ---------- | ---------------------------------------------------------------------------------------------------------------------------- | -------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `schema`   | [Schema Object](../../schemas.md)                                                                                            |          | A schema that describes the request or response content.                                                                                                                                                                                                                                                                                                                         |
-| `examples` | Map[string, [Example Object](../../examples.md) \| [OpenAPI Reference Object](../../references.md#openapi-reference-object)] |          | Optional examples of the media type. These examples override any examples from the [Schema Object](../../schemas.md) in the `schema` field. Mutually exclusive with the `example` field.                                                                                                                                                                                         |
-| `example`  | Any                                                                                                                          |          | An optional example of the media type. This example overrides any examples from the [Schema Object](../../schemas.md) in the `schema` field. Mutually exclusive with the `examples` field. Deprecated in OpenAPI 3.1 in favor of `examples`.                                                                                                                                     |
-| `encoding` | Map[string, [Encoding Object](./requests.md#encoding-object)]                                           |          | An optional map of [Encoding Objects](./requests.md#encoding-object). Each Encoding Object's key should match one of the properties from the [Schema Object](../../schemas.md) in the `schema` field. Only applies to [Request Body Objects](./requests.md) when the media type is `multipart` or `application/x-www-form-urlencoded`. |
-| `x-*`      | [Extensions](../../extensions.md)                                                                                            |          | Any number of extension fields as required by tooling and vendors.                                                                                                                                                                                                                                                                                                               |
+<Table
+  title="Media Type Object Fields"
+  data={[
+    {
+      field: "`schema`",
+      type: "[Schema Object](../../schemas.md)",
+      required: "",
+      description: "A schema that describes the request or response content."
+    },
+    {
+      field: "`examples`",
+      type: "Map[string, [Example Object](../../examples.md) \\| [OpenAPI Reference Object](../../references.md#openapi-reference-object)]",
+      required: "",
+      description: "Optional examples of the media type. These examples override any examples from the [Schema Object](../../schemas.md) in the `schema` field. Mutually exclusive with the `example` field."
+    },
+    {
+      field: "`example`",
+      type: "Any",
+      required: "",
+      description: "An optional example of the media type. This example overrides any examples from the [Schema Object](../../schemas.md) in the `schema` field. Mutually exclusive with the `examples` field. Deprecated in OpenAPI 3.1 in favor of `examples`."
+    },
+    {
+      field: "`encoding`",
+      type: "Map[string, [Encoding Object](./requests.md#encoding-object)]",
+      required: "",
+      description: "An optional map of [Encoding Objects](./requests.md#encoding-object). Each Encoding Object's key should match one of the properties from the [Schema Object](../../schemas.md) in the `schema` field. Only applies to [Request Body Objects](./requests.md) when the media type is `multipart` or `application/x-www-form-urlencoded`."
+    },
+    {
+      field: "`x-*`",
+      type: "[Extensions](../../extensions.md)",
+      required: "",
+      description: "Any number of extension fields as required by tooling and vendors."
+    }
+  ]}
+  columns={[
+    {
+      key: "field",
+      header: "Field"
+    },
+    {
+      key: "type",
+      header: "Type"
+    },
+    {
+      key: "required",
+      header: "Required"
+    },
+    {
+      key: "description",
+      header: "Description"
+    }
+  ]}
+/>
 
 ## Media Type Examples
 
