--- a/docs/prep-openapi/overlays/create-overlays.mdx
+++ b/docs/prep-openapi/overlays/create-overlays.mdx
@@ -79,6 +79,19 @@ actions:
 
 ```yaml ! overlay.yaml
 # !focus(2:4)
+overlay: 1.0.0
+info:
+  title: Overlay to fix the Speakeasy bar
+  version: 0.0.1
+actions:
+  - target: "$.tags"
+    description: Add a Snacks tag to the global tags list
+    update:
+      - name: Snacks
+        description: All methods related to serving snacks
+  - target: "$.paths['/dinner']"
+    description: Remove all paths related to serving dinner
+    remove: true
 ```
 
 ---
