--- a/openapi-hub/paths/parameters/header-parameters.mdx
+++ b/openapi-hub/paths/parameters/header-parameters.mdx
@@ -1,5 +1,7 @@
 # OpenAPI Header Parameters
 
+import { Table } from "@/components/ui/Table";
+
 Header parameters are serialized at runtime to the HTTP headers of the request. Types are generally serialized to a string representation, and only `simple` style is available.
 
 Explode defaults to `false`.
@@ -18,9 +20,30 @@ Primitive types such as `string`, `number`, `integer`, and `boolean` are seriali
 
 For the example below, we will use a header parameter named `X-Drink-Limit` with a value of `5`.
 
-| Style    | Explode == `true` |     Explode == `false`      |
-| -------- | :---------------: | :-------------------------: |
-| `simple` | `X-Drink-Type: 5` | `X-Drink-Type: 5` (default) |
+<Table
+  title="Primitive Types Serialization"
+  data={[
+    {
+      style: "`simple`",
+      explodeTrue: "`X-Drink-Type: 5`",
+      explodeFalse: "`X-Drink-Type: 5` (default)"
+    }
+  ]}
+  columns={[
+    {
+      key: "style",
+      header: "Style"
+    },
+    {
+      key: "explodeTrue",
+      header: "Explode == `true`"
+    },
+    {
+      key: "explodeFalse",
+      header: "Explode == `false`"
+    }
+  ]}
+/>
 
 ## Simple Arrays As Headers in OpenAPI
 
@@ -28,9 +51,30 @@ For simple arrays of primitive types such as `string`, `number`, `integer`, and 
 
 For the example below, we will use a header parameter named `X-Drink-Types` with a value of `["gin", "vodka", "rum"]`.
 
-| Style    |       Explode == `true`       |           Explode == `false`            |
-| -------- | :---------------------------: | :-------------------------------------: |
-| `simple` | `X-Drink-Type: gin,vodka,rum` | `X-Drink-Type: gin,vodka,rum` (default) |
+<Table
+  title="Simple Arrays Serialization"
+  data={[
+    {
+      style: "`simple`",
+      explodeTrue: "`X-Drink-Type: gin,vodka,rum`",
+      explodeFalse: "`X-Drink-Type: gin,vodka,rum` (default)"
+    }
+  ]}
+  columns={[
+    {
+      key: "style",
+      header: "Style"
+    },
+    {
+      key: "explodeTrue",
+      header: "Explode == `true`"
+    },
+    {
+      key: "explodeFalse",
+      header: "Explode == `false`"
+    }
+  ]}
+/>
 
 ## Simple Objects As Headers in OpenAPI
 
@@ -38,9 +82,30 @@ For simple objects whose fields are primitive types such as `string`, `number`, 
 
 For the example below, we will use a header parameter named `X-Drink-Filter` with a value of `{"type": "cocktail", "strength": 5}`.
 
-| Style    |            Explode == `true`             |                 Explode == `false`                 |
-| -------- | :--------------------------------------: | :------------------------------------------------: |
-| `simple` | `X-Drink-Type: type=cocktail,strength=5` | `X-Drink-Type: type,cocktail,strength,5` (default) |
+<Table
+  title="Simple Objects Serialization"
+  data={[
+    {
+      style: "`simple`",
+      explodeTrue: "`X-Drink-Type: type=cocktail,strength=5`",
+      explodeFalse: "`X-Drink-Type: type,cocktail,strength,5` (default)"
+    }
+  ]}
+  columns={[
+    {
+      key: "style",
+      header: "Style"
+    },
+    {
+      key: "explodeTrue",
+      header: "Explode == `true`"
+    },
+    {
+      key: "explodeFalse",
+      header: "Explode == `false`"
+    }
+  ]}
+/>
 
 ## Complex Objects and Arrays As Headers in OpenAPI
 
