--- a/openapi-hub/paths/parameters/path-parameters.mdx
+++ b/openapi-hub/paths/parameters/path-parameters.mdx
@@ -1,6 +1,8 @@
 
 # OpenAPI path parameters
 
+import { Table } from "@/components/ui/Table";
+
 Path parameters are serialized at runtime to the path of the URL, meaning they are generally serialized to a string representation and must adhere to the [RFC 3986](https://www.rfc-editor.org/rfc/rfc3986) specification. Reserved characters are percent-encoded (for example, `?` becomes `%3F`).
 
 By default, path parameters are serialized using `style: simple` and `explode: false`, but several different serialization options are available:
@@ -15,11 +17,40 @@ Primitive types such as `string`, `number`, `integer`, and `boolean` are seriali
 
 For the examples below, we will use a path parameter named `type` with a value of `cocktail` for a path-templated URL of `/drinks/{type}`.
 
-| Style    |    Explode == `true`     |    Explode == `false`    |
-| -------- | :----------------------: | :----------------------: |
-| `simple` |    `/drinks/cocktail`    |    `/drinks/cocktail`    |
-| `label`  |   `/drinks/.cocktail`    |   `/drinks/.cocktail`    |
-| `matrix` | `/drinks/;type=cocktail` | `/drinks/;type=cocktail` |
+<Table
+  title="Primitive Types Serialization"
+  data={[
+    {
+      style: "`simple`",
+      explodeTrue: "/drinks/cocktail",
+      explodeFalse: "/drinks/cocktail"
+    },
+    {
+      style: "`label`",
+      explodeTrue: "/drinks/.cocktail",
+      explodeFalse: "/drinks/.cocktail"
+    },
+    {
+      style: "`matrix`",
+      explodeTrue: "/drinks/;type=cocktail",
+      explodeFalse: "/drinks/;type=cocktail"
+    }
+  ]}
+  columns={[
+    {
+      key: "style",
+      header: "Style"
+    },
+    {
+      key: "explodeTrue",
+      header: "Explode == `true`"
+    },
+    {
+      key: "explodeFalse",
+      header: "Explode == `false`"
+    }
+  ]}
+/>
 
 ## Simple arrays as path parameters in OpenAPI
 
@@ -27,11 +58,40 @@ For simple arrays of primitive types such as `string`, `number`, `integer`, and 
 
 For the examples below, we will use a path parameter named `types` with a value of `["gin", "vodka", "rum"]` for a path-templated URL of `/drinks/{types}`.
 
-| Style    |             Explode == `true`              |        Explode == `false`         |
-| -------- | :----------------------------------------: | :-------------------------------: |
-| `simple` |          `/drinks/gin,vodka,rum`           | `/drinks/gin,vodka,rum` (default) |
-| `label`  |          `/drinks/.gin.vodka.rum`          |     `/drinks/.gin,vodka,rum`      |
-| `matrix` | `/drinks/;types=gin;types=vodka;types=rum` |  `/drinks/;types=gin,vodka,rum`   |
+<Table
+  title="Simple Arrays Serialization"
+  data={[
+    {
+      style: "`simple`",
+      explodeTrue: "/drinks/gin,vodka,rum",
+      explodeFalse: "/drinks/gin,vodka,rum (default)"
+    },
+    {
+      style: "`label`",
+      explodeTrue: "/drinks/.gin.vodka.rum",
+      explodeFalse: "/drinks/.gin,vodka,rum"
+    },
+    {
+      style: "`matrix`",
+      explodeTrue: "/drinks/;types=gin;types=vodka;types=rum",
+      explodeFalse: "/drinks/;types=gin,vodka,rum"
+    }
+  ]}
+  columns={[
+    {
+      key: "style",
+      header: "Style"
+    },
+    {
+      key: "explodeTrue",
+      header: "Explode == `true`"
+    },
+    {
+      key: "explodeFalse",
+      header: "Explode == `false`"
+    }
+  ]}
+/>
 
 ## Simple objects as path parameters in OpenAPI
 
@@ -39,11 +99,40 @@ For simple objects whose fields are primitive types such as `string`, `number`, 
 
 For the examples below, we will use a path parameter named `filter` with a value of `{"type": "cocktail", "strength": 5}` for a path-templated URL of `/drinks/{filter}`.
 
-| Style    |          Explode == `true`          |              Explode == `false`              |
-| -------- | :---------------------------------: | :------------------------------------------: |
-| `simple` | `/drinks/type=cocktail,strength=5`  | `/drinks/type,cocktail,strength,5` (default) |
-| `label`  | `/drinks/.type=cocktail.strength=5` |     `/drinks/.type,cocktail,strength,5`      |
-| `matrix` | `/drinks/;type=cocktail;strength=5` |  `/drinks/;filter=type,cocktail,strength,5`  |
+<Table
+  title="Simple Objects Serialization"
+  data={[
+    {
+      style: "`simple`",
+      explodeTrue: "/drinks/type=cocktail,strength=5",
+      explodeFalse: "/drinks/type,cocktail,strength,5 (default)"
+    },
+    {
+      style: "`label`",
+      explodeTrue: "/drinks/.type=cocktail.strength=5",
+      explodeFalse: "/drinks/.type,cocktail,strength,5"
+    },
+    {
+      style: "`matrix`",
+      explodeTrue: "/drinks/;type=cocktail;strength=5",
+      explodeFalse: "/drinks/;filter=type,cocktail,strength,5"
+    }
+  ]}
+  columns={[
+    {
+      key: "style",
+      header: "Style"
+    },
+    {
+      key: "explodeTrue",
+      header: "Explode == `true`"
+    },
+    {
+      key: "explodeFalse",
+      header: "Explode == `false`"
+    }
+  ]}
+/>
 
 ## Complex objects and arrays as path parameters in OpenAPI
 
