--- a/openapi-hub/paths/parameters/query-parameters.mdx
+++ b/openapi-hub/paths/parameters/query-parameters.mdx
@@ -1,5 +1,7 @@
 # OpenAPI Query Parameters
 
+import { Table } from "@/components/ui/Table";
+
 Query parameters are serialized at runtime to the query string of the URL, meaning they are generally serialized to a string representation and must adhere to the [RFC 3986](https://www.rfc-editor.org/rfc/rfc3986) specification. By default, reserved characters are percent-encoded (for example, `?` becomes `%3F`) but this can be disabled by setting `allowReserved` to `true`.
 
 By default, query parameters are serialized using `style: form` and `explode: true` but there are a number of different serialization options available:
@@ -15,12 +17,45 @@ For primitive types such as `string`, `number`, `integer,` and `boolean`, the se
 
 For the examples below, we will use a query parameter named `limit` with a value of `10`.
 
-| Style            |      Explode == `true`      | Explode == `false` |
-| ---------------- | :-------------------------: | :----------------: |
-| `form`           | `/query?limit=10` (default) | `/query?limit=10`  |
-| `pipeDelimited`  |      `/query?limit=10`      | `/query?limit=10`  |
-| `spaceDelimited` |      `/query?limit=10`      | `/query?limit=10`  |
-| `deepObject`     |        **NOT VALID**        |   **NOT VALID**    |
+<Table
+  title="Primitive Types Serialization"
+  data={[
+    {
+      style: "`form`",
+      explodeTrue: "/query?limit=10 (default)",
+      explodeFalse: "/query?limit=10"
+    },
+    {
+      style: "`pipeDelimited`",
+      explodeTrue: "/query?limit=10",
+      explodeFalse: "/query?limit=10"
+    },
+    {
+      style: "`spaceDelimited`",
+      explodeTrue: "/query?limit=10",
+      explodeFalse: "/query?limit=10"
+    },
+    {
+      style: "`deepObject`",
+      explodeTrue: "**NOT VALID**",
+      explodeFalse: "**NOT VALID**"
+    }
+  ]}
+  columns={[
+    {
+      key: "style",
+      header: "Style"
+    },
+    {
+      key: "explodeTrue",
+      header: "Explode == `true`"
+    },
+    {
+      key: "explodeFalse",
+      header: "Explode == `false`"
+    }
+  ]}
+/>
 
 ## Simple Arrays As Query Parameters in OpenAPI
 
@@ -28,12 +63,45 @@ For simple arrays of primitive types such as `string`, `number`, `integer`, and 
 
 For the examples below, we will use a query parameter named `terms` with a value of `["gin", "vodka", "rum"]`.
 
-| Style            |                 Explode == `true`                  |        Explode == `false`        |
-| ---------------- | :------------------------------------------------: | :------------------------------: |
-| `form`           | `/query?terms=gin&terms=vodka&terms=rum` (default) |   `/query?terms=gin,vodka,rum`   |
-| `pipeDelimited`  |      `/query?terms=gin&terms=vodka&terms=rum`      |  `/query?terms=gin\|vodka\|rum`  |
-| `spaceDelimited` |      `/query?terms=gin&terms=vodka&terms=rum`      | `/query?terms=gin%20vodka%20rum` |
-| `deepObject`     |                   **NOT VALID**                    |          **NOT VALID**           |
+<Table
+  title="Simple Arrays Serialization"
+  data={[
+    {
+      style: "`form`",
+      explodeTrue: "/query?terms=gin&terms=vodka&terms=rum (default)",
+      explodeFalse: "/query?terms=gin,vodka,rum"
+    },
+    {
+      style: "`pipeDelimited`",
+      explodeTrue: "/query?terms=gin&terms=vodka&terms=rum",
+      explodeFalse: "/query?terms=gin|vodka|rum"
+    },
+    {
+      style: "`spaceDelimited`",
+      explodeTrue: "/query?terms=gin&terms=vodka&terms=rum",
+      explodeFalse: "/query?terms=gin%20vodka%20rum"
+    },
+    {
+      style: "`deepObject`",
+      explodeTrue: "**NOT VALID**",
+      explodeFalse: "**NOT VALID**"
+    }
+  ]}
+  columns={[
+    {
+      key: "style",
+      header: "Style"
+    },
+    {
+      key: "explodeTrue",
+      header: "Explode == `true`"
+    },
+    {
+      key: "explodeFalse",
+      header: "Explode == `false`"
+    }
+  ]}
+/>
 
 ## Simple Objects As Query Parameters in OpenAPI
 
@@ -41,12 +109,45 @@ For simple objects whose fields are primitive types such as `string`, `number`, 
 
 For the examples below, we will use a query parameter named `filter` with a value of `{"type": "cocktail", "strength": 5}`.
 
-| Style            |                 Explode == `true`                 |               Explode == `false`               |
-| ---------------- | :-----------------------------------------------: | :--------------------------------------------: |
-| `form`           |    `/query?type=cocktail&strength=5` (default)    |    `/query?filter=type,cocktail,strength,5`    |
-| `pipeDelimited`  |         `/query?type=cocktail&strength=5`         |  `/query?filter=type\|cocktail\|strength\|5`   |
-| `spaceDelimited` |         `/query?type=cocktail&strength=5`         | `/query?filter=type%20cocktail%20strength%205` |
-| `deepObject`     | `/query?filter[type]=cocktail&filter[strength]=5` |                 **NOT VALID**                  |
+<Table
+  title="Simple Objects Serialization"
+  data={[
+    {
+      style: "`form`",
+      explodeTrue: "/query?type=cocktail&strength=5 (default)",
+      explodeFalse: "/query?filter=type,cocktail,strength,5"
+    },
+    {
+      style: "`pipeDelimited`",
+      explodeTrue: "/query?type=cocktail&strength=5",
+      explodeFalse: "/query?filter=type|cocktail|strength|5"
+    },
+    {
+      style: "`spaceDelimited`",
+      explodeTrue: "/query?type=cocktail&strength=5",
+      explodeFalse: "/query?filter=type%20cocktail%20strength%205"
+    },
+    {
+      style: "`deepObject`",
+      explodeTrue: "/query?filter[type]=cocktail&filter[strength]=5",
+      explodeFalse: "**NOT VALID**"
+    }
+  ]}
+  columns={[
+    {
+      key: "style",
+      header: "Style"
+    },
+    {
+      key: "explodeTrue",
+      header: "Explode == `true`"
+    },
+    {
+      key: "explodeFalse",
+      header: "Explode == `false`"
+    }
+  ]}
+/>
 
 There is a special case for simple objects with fields that are an array of primitive types such as `string`, `number`, `integer`, and `boolean` that can be handled by `style: deepObject` and `explode: true`. For example, for a query parameter named `filter` with a value of `{"type": ["cocktail", "mocktail"], "strength": [5, 10]}`, this will be serialized like `/query?filter[type]=cocktail&filter[type]=mocktail&filter[strength]=5&filter[strength]=10`.
 
