chore: update imports

--- a/docs/customize-testing/bootstrapping-test-generation.mdx
+++ b/docs/customize-testing/bootstrapping-test-generation.mdx
@@ -3,7 +3,7 @@ title: "Bootstrapping SDK Tests"
 description: "Learn how to automatically generate contract testing for your API and SDKs."
 ---
 
-import { Table } from "@/components/ui/Table";
+import { Table } from "@/mdx/components";
 
 # Bootstrapping SDK Tests
 
