--- a/docs/customize/authentication/custom-security-schemes.mdx
+++ b/docs/customize/authentication/custom-security-schemes.mdx
@@ -4,9 +4,7 @@ sidebar_label: Customize Security Schemes
 description: "Customize your security and authentication SDK settings for OAuth."
 ---
 
-
-import { Table } from "@/components/ui/Table";
-import { CodeWithTabs, Callout } from "@/mdx/components";
+import { CodeWithTabs, Callout, Table } from "@/mdx/components";
 
 # Custom Security Schemes
 
