--- a/docs/customize/responses/errors.mdx
+++ b/docs/customize/responses/errors.mdx
@@ -305,7 +305,7 @@ Apply the `x-speakeasy-errors` extension at the `paths`, `path item`, or `operat
 
 The `x-speakeasy-errors` extension is an object with the following properties:
 
-import { Table } from "@/components/ui/Table";
+import { Table } from "@/mdx/components";
 
 <Table 
   data={[
