--- a/docs/customize/runtime/pagination.mdx
+++ b/docs/customize/runtime/pagination.mdx
@@ -234,7 +234,7 @@ Indicates whether the input should be passed into the operation as a path or que
 
 **`type`**
 
-import { Table } from "@/components/ui/Table";
+import { Table } from "@/mdx/components";
 
 <Table
   data={[
