--- a/docs/customize/runtime/retries.mdx
+++ b/docs/customize/runtime/retries.mdx
@@ -4,8 +4,7 @@ description: "Automatically retry failed requests in your Speakeasy SDKs. Enable
 slug: "/customize-sdks/retries/"
 ---
 
-import { Table } from "@/components/ui/Table";
-import { CodeWithTabs } from "@/mdx/components";
+import { CodeWithTabs, Table } from "@/mdx/components";
 
 # Retries
 
