--- a/docs/customize/webhooks.mdx
+++ b/docs/customize/webhooks.mdx
@@ -4,8 +4,7 @@ description: "Learn how to generate webhook types in your Speakeasy client SDKs 
 slug: "/customize-sdks/webhooks/"
 ---
 
-import { Table } from "@/components/ui/Table";
-import { Callout, Screenshot } from "@/mdx/components";
+import { Callout, Screenshot, Table } from "@/mdx/components";
 import webhooksBillingImage from '../assets/webhooks-billing.png';
 
 # Add webhooks to your SDKs
