--- a/docs/product-security.mdx
+++ b/docs/product-security.mdx
@@ -4,8 +4,7 @@ description: "Speakeasy prioritizes security and privacy as core development pri
 ---
 
 
-import { Table } from "@/components/ui/Table";
-import { Callout } from "@/mdx/components";
+import { Callout, Table } from "@/mdx/components";
 
 # Security and data privacy
 
