--- a/docs/sdk-docs.mdx
+++ b/docs/sdk-docs.mdx
@@ -4,8 +4,7 @@ description: "Managed SDKs: Learn how to generate developer-friendly documentati
 sidebar_label: "Customize Documentation"
 ---
 
-import { CodeWithTabs } from "@/mdx/components";
-import { Table } from "@/components/ui/Table";
+import { CodeWithTabs, Table } from "@/mdx/components";
 
 # Editing Your SDK Docs
 
