--- a/docs/supported/terraform.mdx
+++ b/docs/supported/terraform.mdx
@@ -4,7 +4,7 @@ sidebar_label: Terraform Support Matrix
 description: "Support matrix for Speakeasy Terraform."
 ---
 
-import { Table } from "@/components/ui/Table";
+import { Table } from "@/mdx/components";
 
 # Speakeasy Terraform provider support matrix
 
