--- a/openapi-hub/arazzo.mdx
+++ b/openapi-hub/arazzo.mdx
@@ -1,6 +1,4 @@
-import { Spotlight } from "@/mdx/components";
-import { Table } from "@/components/ui/Table";
-
+import { Spotlight, Table } from "@/mdx/components";
 
 # Arazzo: OpenAPI Workflows
 
