--- a/openapi-hub/components.mdx
+++ b/openapi-hub/components.mdx
@@ -1,6 +1,6 @@
 # Components Object in OpenAPI
 
-import { Table } from "@/components/ui/Table";
+import { Table } from "@/mdx/components";
 
 The Components Object is a container for reusable objects that can be referenced across the API. These objects can be referenced using [References](/openapi/references), and generally are only valid if referenced by other parts of the API.
 
