--- a/openapi-hub/examples.mdx
+++ b/openapi-hub/examples.mdx
@@ -1,6 +1,6 @@
 # Examples in OpenAPI
 
-import { Table } from "@/components/ui/Table";
+import { Table } from "@/mdx/components";
 
 ## Why add examples to your OpenAPI spec?
 
