--- a/openapi-hub/extensions.mdx
+++ b/openapi-hub/extensions.mdx
@@ -1,6 +1,6 @@
 # Extensions in OpenAPI
 
-import { Table } from "@/components/ui/Table";
+import { Table } from "@/mdx/components";
 
 Extensions allow us to add extra keywords not included in the OpenAPI Specification. This enables tooling such as SDK generators to access vendor-specific functionality directly in an OpenAPI document.
 
