--- a/openapi-hub/info.mdx
+++ b/openapi-hub/info.mdx
@@ -1,6 +1,6 @@
 # Info Object in OpenAPI
 
-import { Table } from "@/components/ui/Table";
+import { Table } from "@/mdx/components";
 
 The document's `info` object contains information about the document, including fields like `title`, `version`, and `description` that help to identify the purpose and owner of the document.
 
