--- a/openapi-hub/paths.mdx
+++ b/openapi-hub/paths.mdx
@@ -1,6 +1,6 @@
 # Paths Object in OpenAPI
 
-import { Table } from "@/components/ui/Table";
+import { Table } from "@/mdx/components";
 
 The `paths` object is a map of [Path Item Objects](/openapi/paths#path-item-object) that describes the available paths and operations for the API.
 
