--- a/openapi-hub/paths/operations.mdx
+++ b/openapi-hub/paths/operations.mdx
@@ -1,6 +1,6 @@
-# The OpenAPI Operation Object
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# The OpenAPI Operation Object
 
 An operation object describes a single API operation within a path, including all its possible inputs and outputs and the configuration required to make a successful request.
 
