--- a/openapi-hub/paths/operations/requests.mdx
+++ b/openapi-hub/paths/operations/requests.mdx
@@ -1,6 +1,6 @@
-# Request Body Object in OpenAPI
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# Request Body Object in OpenAPI
 
 The request body is used to describe the body of the request for operations that support a request body.
 
