--- a/openapi-hub/paths/operations/responses.mdx
+++ b/openapi-hub/paths/operations/responses.mdx
@@ -1,6 +1,6 @@
-# OpenAPI Responses
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# OpenAPI Responses
 
 The Responses Object is a map of [Response Objects](/openapi/paths/operations/responses#response-object) or [References](/openapi/references) to [Response Objects](/openapi/paths/operations/responses#response-object) that define the possible responses that can be returned from executing the operation.
 
