--- a/openapi-hub/paths/operations/responses/headers.mdx
+++ b/openapi-hub/paths/operations/responses/headers.mdx
@@ -1,6 +1,6 @@
-# OpenAPI Headers
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# OpenAPI Headers
 
 A map of header names to [Header Objects](/openapi/paths/operations/responses/headers) or [References](/openapi/references) that define headers in [Response Objects](/openapi/paths/operations/responses#response-object) or [Encoding Objects](/openapi/paths/operations/requests#encoding-object).
 
