--- a/openapi-hub/paths/operations/responses/links.mdx
+++ b/openapi-hub/paths/operations/responses/links.mdx
@@ -1,6 +1,6 @@
-# OpenAPI Links
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# OpenAPI Links
 
 The Links object is a map of [Link Objects](/openapi/paths/operations/responses/links#link-object) or [References](/openapi/references) to [Link Objects](/openapi/paths/operations/responses/links#link-object) that allows for describing possible API-use scenarios between different operations. For example, if a response returns a `Drink` object, and the `Drink` object has an `ingredients` property that is a list of `Ingredient` objects, then a link can be defined to the `listIngredients` operation showing how the ingredients can be used as an input to the `listIngredients` operation.
 
