--- a/openapi-hub/paths/parameters/cookie-parameters.mdx
+++ b/openapi-hub/paths/parameters/cookie-parameters.mdx
@@ -1,6 +1,6 @@
-# Cookie Parameters in OpenAPI
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# Cookie Parameters in OpenAPI
 
 Cookie parameters are serialized at runtime to an HTTP cookie header. Types are generally serialized to a string representation, and only `form` style is available.
 
