--- a/openapi-hub/paths/parameters/header-parameters.mdx
+++ b/openapi-hub/paths/parameters/header-parameters.mdx
@@ -1,6 +1,6 @@
-# OpenAPI Header Parameters
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# OpenAPI Header Parameters
 
 Header parameters are serialized at runtime to the HTTP headers of the request. Types are generally serialized to a string representation, and only `simple` style is available.
 
