--- a/openapi-hub/paths/parameters/query-parameters.mdx
+++ b/openapi-hub/paths/parameters/query-parameters.mdx
@@ -1,6 +1,6 @@
-# OpenAPI Query Parameters
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# OpenAPI Query Parameters
 
 Query parameters are serialized at runtime to the query string of the URL, meaning they are generally serialized to a string representation and must adhere to the [RFC 3986](https://www.rfc-editor.org/rfc/rfc3986) specification. By default, reserved characters are percent-encoded (for example, `?` becomes `%3F`) but this can be disabled by setting `allowReserved` to `true`.
 
