--- a/openapi-hub/references.mdx
+++ b/openapi-hub/references.mdx
@@ -1,6 +1,6 @@
-# References ($ref) in OpenAPI
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# References ($ref) in OpenAPI
 
 While creating an OpenAPI schema, you might notice duplicated parts in your document. Using references in OpenAPI helps you define a schema once and reuse it elsewhere in the document. This approach minimizes duplication and makes your OpenAPI document more readable and maintainable.
 
