--- a/openapi-hub/schemas.mdx
+++ b/openapi-hub/schemas.mdx
@@ -1,6 +1,6 @@
-# Schema Object in OpenAPI
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# Schema Object in OpenAPI
 
 The Schema Object represents any data type used as input or output in OpenAPI. Data types can be objects, arrays, or primitives such as `string`, `number`, `integer`, and `boolean`.
 
