--- a/openapi-hub/schemas/objects/polymorphism.mdx
+++ b/openapi-hub/schemas/objects/polymorphism.mdx
@@ -1,6 +1,6 @@
-# Composition and Inheritance in OpenAPI
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# Composition and Inheritance in OpenAPI
 
 OpenAPI allows us to combine object schemas using the keywords `allOf`, `anyOf`, and `oneOf`.
 
