--- a/openapi-hub/schemas/objects/xml.mdx
+++ b/openapi-hub/schemas/objects/xml.mdx
@@ -1,6 +1,6 @@
-# XML Object in OpenAPI
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# XML Object in OpenAPI
 
 The XML Object allows us to add details about how the schema should be represented as XML.
 
