--- a/openapi-hub/security/security-schemes/security-api-key.mdx
+++ b/openapi-hub/security/security-schemes/security-api-key.mdx
@@ -1,6 +1,6 @@
-# API Key Security Scheme in OpenAPI
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# API Key Security Scheme in OpenAPI
 
 An API Key security scheme is the most common form of authentication for machine-to-machine APIs and supports passing a pre-shared secret in several ways. The secret can be passed either via the Authorization header (or another custom header), as a query parameter, or via a cookie.
 
