--- a/openapi-hub/security/security-schemes/security-basic.mdx
+++ b/openapi-hub/security/security-schemes/security-basic.mdx
@@ -1,6 +1,6 @@
-# Basic Security Scheme in OpenAPI
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# Basic Security Scheme in OpenAPI
 
 A Basic security scheme is a simple authentication mechanism baked into the HTTP protocol that supports sending an Authorization header containing an encoded username and password.
 
