--- a/openapi-hub/security/security-schemes/security-bearer.mdx
+++ b/openapi-hub/security/security-schemes/security-bearer.mdx
@@ -1,6 +1,6 @@
-# Bearer Security Scheme in OpenAPI
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# Bearer Security Scheme in OpenAPI
 
 The Bearer security scheme allows passing a token (most commonly a JWT) in the Authorization header.
 
