--- a/openapi-hub/security/security-schemes/security-oauth2.mdx
+++ b/openapi-hub/security/security-schemes/security-oauth2.mdx
@@ -1,6 +1,6 @@
-# OAuth 2.0 Security Scheme in OpenAPI
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# OAuth 2.0 Security Scheme in OpenAPI
 
 OAuth 2.0 is a popular open authentication mechanism that supports an authentication flow allowing servers to authenticate on behalf of a user or organization.
 
