--- a/openapi-hub/servers.mdx
+++ b/openapi-hub/servers.mdx
@@ -1,6 +1,6 @@
-# OpenAPI Servers
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# OpenAPI Servers
 
 A list of [Server Objects](/openapi/servers) that either the entire API or a specific path or operation is available on. Servers can be defined at the [Document](/openapi#openapi-document-structure) level, the [Path](/openapi/paths) level, or the [Operation](/openapi/paths/operations) level.
 
