--- a/docs/prep-openapi/linting.mdx
+++ b/docs/prep-openapi/linting.mdx
@@ -146,7 +146,7 @@ After creating custom functions, place them in a directory named `functions` in 
 
 The rules available to the Speakeasy Linter are listed below and can be used in custom rulesets or to match and modify default rules in the `lint.yaml` file.
 
-import { Table } from "@/components/ui/Table";
+import { Table } from "@/mdx/components";
 
 <Table 
   data={[
