--- a/openapi-hub/paths/operations/content.mdx
+++ b/openapi-hub/paths/operations/content.mdx
@@ -1,5 +1,4 @@
-import { Callout } from "@/mdx/components";
-import { Table } from "@/components/ui/Table";
+import { Callout, Table } from "@/mdx/components";
 
 # Content and Media Types in OpenAPI
 
