--- a/openapi-hub/paths/parameters.mdx
+++ b/openapi-hub/paths/parameters.mdx
@@ -1,6 +1,6 @@
-# OpenAPI Parameters
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# OpenAPI Parameters
 
 Parameters are used to describe inputs to an operation. Parameters can be defined at the path or operation level and are merged with any duplicates at the operation level, overriding any defined at the path level.
 
