--- a/openapi-hub/security/security-schemes/security-openid.mdx
+++ b/openapi-hub/security/security-schemes/security-openid.mdx
@@ -1,6 +1,6 @@
-# OpenID Connect Security Scheme in OpenAPI
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# OpenID Connect Security Scheme in OpenAPI
 
 The OpenID Connect security scheme allows for the discovery of configuration values for an OpenID Connect provider. This is generally used for authentication mechanisms based on the OpenID Connect protocol.
 
