--- a/openapi-hub/tags.mdx
+++ b/openapi-hub/tags.mdx
@@ -1,6 +1,6 @@
-# OpenAPI Tags
+import { Table } from "@/mdx/components";
 
-import { Table } from "@/components/ui/Table";
+# OpenAPI Tags
 
 The document-level `tags` field contains a list of [tag](/openapi/tags#tag-object) definitions that may be used to categorize or group operations in the API. Tags can be referenced by [operations](/openapi/paths/operations) via the operations-level `tags` field.
 
